<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tubes1PAPK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset_button">RESET</string>
    <string name="location_button">Update Location</string>
    <string name="remaining_button">Get Remaining Chest</string>
    <string name="nearby_button">Search Nearby Chest</string>
    <string name="capture_button">Capture</string>
    <string name="string_null">NULL</string>
    <string name="title_activity_radar">RadarActivity</string>

</resources>
