<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/displaytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null" />
    
    <TextView
        android:id="@+id/displaylatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        />
    
    <TextView
        android:id="@+id/displaylongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        />
    
    <EditText
        android:inputType="text"
        android:id="@+id/imagenamefield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_null"
        />
    
    <Button 
        android:id="@+id/resetButton"
        android:onClick="onResetClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        />
    
    <Button 
        android:id="@+id/getRemainingButton"
        android:onClick="onGetRemainingClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_button"
        />
    
    <Button 
        android:id="@+id/searchButton"
        android:onClick="onSearchClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_button"
        />
    
    <Button
        android:id="@+id/captureButton"
        android:onClick="onCaptureImageClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_button" 
        />
    
    <Button 
        android:id="@+id/getLocationButton"
        android:onClick="onUpdateLocationClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_button"
        />

</LinearLayout>
